--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -13,11 +13,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/15/2017
   ms.author: nitinme
-  ms.openlocfilehash: cc51070b4ff41107700585160cff8bbe41cc5d7d
-  ms.sourcegitcommit: 0b02e180f02ca3acbfb2f91ca3e36989df0f2d9c
+  ms.openlocfilehash: c94a3e7ecaf89612238b80ed83474af792c3efc4
+  ms.sourcegitcommit: 8aab1aab0135fad24987a311b42a1c25a839e9f3
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 03/05/2018
+  ms.lasthandoff: 03/16/2018
 abstract:
   description: "Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster. Databricks har utformats med grundarna av Apache Spark och är integrerat med Azure för att tillhandahålla konfiguration med ett klick, effektiva arbetsflöden och en interaktiv arbetsyta som möjliggör samarbete mellan dataanalytiker, dataingenjörer och affärsanalytiker."
   aside:
@@ -48,7 +48,7 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"https://docs.azuredatabricks.net/user-guide/getting-started.html\" target=\"_blank\">Komma igång med Azure Databricks</a>"
+    - html: "<a href=\"/azure/azure-databricks/databricks-stream-from-eventhubs\">Strömma data från Event Hubs med hjälp av Azure Databricks</a>"
     - html: "<a href=\"https://go.microsoft.com/fwlink/?linkid=864083\" target=\"_blank\">Importera data från Azure Storage</a>"
     - hmtl: <a href="https://go.microsoft.com/fwlink/?linkid=864084" target="_blank">Import data from Azure Data Lake Store</a>
     - html: "<a href=\"https://docs.azuredatabricks.net/user-guide/notebooks/index.html\" target=\"_blank\">Arbeta med bärbara datorer</a>"
