--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -179,6 +179,8 @@
           href: durable-functions-counter.md
         - name: Mänsklig interaktion
           href: durable-functions-phone-verification.md
+        - name: Enhetstestning
+          href: durable-functions-unit-testing.md
 - name: Referens
   items:
     - name: Bindningar
