--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -31,6 +31,18 @@
           href: service-fabric-tutorial-deploy-app-with-cicd-vsts.md
         - name: 4- Övervaka och diagnostisera
           href: service-fabric-tutorial-monitoring-aspnet.md
+    - name: Distribuera ett Java-program
+      items:
+        - name: 1 – Skapa ett Java-program
+          href: service-fabric-tutorial-create-java-app.md
+        - name: 2– Felsök programmet
+          href: service-fabric-tutorial-debug-log-local-cluster.md
+        - name: 3 – Distribuera programmet
+          href: service-fabric-tutorial-java-deploy-azure.md
+        - name: 4 – Övervaka och diagnostisera
+          href: service-fabric-tutorial-java-elk.md
+        - name: 5 – Konfigurera CI/CD
+          href: service-fabric-tutorial-java-jenkins.md
     - name: Använd en befintlig .NET-app i behållare
       items:
         - name: 1- Distribuera en .NET-app med hjälp av Docker Compose
@@ -129,6 +141,8 @@
               href: service-fabric-reliable-actors-reentrancy.md
             - name: Typserialisering
               href: service-fabric-reliable-actors-notes-on-actor-type-serialization.md
+        - name: Körbara gästfiler
+          href: service-fabric-guest-executables-introduction.md
     - name: Program och tjänster
       items:
         - name: Programmodell
