--- a/articles/terraform/toc.yml
+++ b/articles/terraform/toc.yml
@@ -15,6 +15,8 @@
       maintainContext: true
 - name: Självstudier
   items:
+    - name: Skapa en virtuell Terraform-dator med MSI aktiverat
+      href: terraform-vm-msi.md
     - name: Skapa ett VM-kluster med Terraform-moduler
       href: terraform-create-vm-cluster-module.md
     - name: Skapa ett VM-kluster med Terraform och HCL
