--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -13,11 +13,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/15/2017
   ms.author: nitinme
-  ms.openlocfilehash: c94a3e7ecaf89612238b80ed83474af792c3efc4
-  ms.sourcegitcommit: 8aab1aab0135fad24987a311b42a1c25a839e9f3
+  ms.openlocfilehash: 8bbb8bb020c8c64e11d072729b59074a406a03ca
+  ms.sourcegitcommit: a36a1ae91968de3fd68ff2f0c1697effbb210ba8
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 03/16/2018
+  ms.lasthandoff: 03/17/2018
 abstract:
   description: "Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster. Databricks har utformats med grundarna av Apache Spark och är integrerat med Azure för att tillhandahålla konfiguration med ett klick, effektiva arbetsflöden och en interaktiv arbetsyta som möjliggör samarbete mellan dataanalytiker, dataingenjörer och affärsanalytiker."
   aside:
@@ -49,6 +49,7 @@ sections:
     style: ordered
     items:
     - html: "<a href=\"/azure/azure-databricks/databricks-stream-from-eventhubs\">Strömma data från Event Hubs med hjälp av Azure Databricks</a>"
+    - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Attitydanalys med Azure Databricks och Cognitive Services</a>
     - html: "<a href=\"https://go.microsoft.com/fwlink/?linkid=864083\" target=\"_blank\">Importera data från Azure Storage</a>"
     - hmtl: <a href="https://go.microsoft.com/fwlink/?linkid=864084" target="_blank">Import data from Azure Data Lake Store</a>
     - html: "<a href=\"https://docs.azuredatabricks.net/user-guide/notebooks/index.html\" target=\"_blank\">Arbeta med bärbara datorer</a>"
