--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -175,8 +175,8 @@
           href: durable-functions-sequence.md
         - name: Förgrening
           href: durable-functions-cloud-backup.md
-        - name: Tillståndskänslig singleton
-          href: durable-functions-counter.md
+        - name: Övervakare
+          href: durable-functions-monitor.md
         - name: Mänsklig interaktion
           href: durable-functions-phone-verification.md
         - name: Enhetstestning
