--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,18 +6,14 @@
       href: azure-stack-poc.md
     - name: Viktig information
       items:
-        - name: Development kit viktig information
-          href: azure-stack-asdk-release-notes.md
-        - name: Integrerat system viktig information
-          items:
-            - name: 1802 uppdatering
-              href: azure-stack-update-1802.md
-            - name: 1712 uppdatering
-              href: azure-stack-update-1712.md
-            - name: 1711 uppdatering
-              href: azure-stack-update-1711.md
-            - name: 1710 uppdatering
-              href: azure-stack-update-1710.md
+        - name: 1802 uppdatering
+          href: azure-stack-update-1802.md
+        - name: 1712 uppdatering
+          href: azure-stack-update-1712.md
+        - name: 1711 uppdatering
+          href: azure-stack-update-1711.md
+        - name: 1710 uppdatering
+          href: azure-stack-update-1710.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -67,8 +63,6 @@
               href: validate-pki-certs.md
         - name: Identitetsintegrering
           href: azure-stack-integrate-identity.md
-        - name: Registrera Azure Stack
-          href: azure-stack-registration.md
         - name: Externa övervakning
           href: azure-stack-integrate-monitor.md
         - name: Integrering av säkerhet
@@ -77,30 +71,14 @@
       href: azure-stack-servicing-policy.md
     - name: Huvudfunktioner och koncept
       href: azure-stack-key-features.md
-    - name: Development kit arkitektur
-      href: azure-stack-architecture.md
     - name: Grundläggande om administration
       href: azure-stack-manage-basics.md
 - name: Instruktionsguider
   items:
-    - name: Distribuera ASDK
-      items:
-        - name: Förutsättningar
-          href: azure-stack-deploy.md
-        - name: Telemetri
-          href: azure-stack-telemetry.md
-        - name: Distribuera
-          href: azure-stack-run-powershell-script.md
-        - name: Installera PowerShell
-          href: azure-stack-powershell-install.md
-        - name: Registrera dig
-          href: azure-stack-register.md
-        - name: Anslut till Azure Stack
-          href: azure-stack-connect-azure-stack.md
-        - name: Lägg till standardavbildning
-          href: azure-stack-add-default-image.md
-        - name: Skapa en virtuell testdator
-          href: azure-stack-provision-vm.md
+    - name: Konfigurera telemetri samling
+      href: azure-stack-telemetry.md
+    - name: Registrera Azure Stack
+      href: azure-stack-registration.md
     - name: Hantera
       items:
         - name: Regionshantering
@@ -246,7 +224,7 @@
               href: azure-stack-app-service-add-worker-roles.md
             - name: Konfigurera distributionskällor
               href: azure-stack-app-service-configure-deployment-sources.md
-            - name: Uppdatera en viktig information för App Service
+            - name: Apptjänst på Azure-stacken uppdatering 1 viktig information
               href: azure-stack-app-service-release-notes-update-one.md
         - name: Lägga till i Marketplace
           items:
@@ -318,6 +296,8 @@
   items:
     - name: Användardokumentation om Azure Stack
       href: /azure/azure-stack/user/
+    - name: ASDK dokumentation
+      href: /azure/azure-stack/asdk/
 - name: Resurser
   items:
     - name: Översikt över Azure Stack
