--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -2,12 +2,10 @@
   href: /azure/hdinsight
 - name: Företagssäkerhet
   items:
-    - name: "Översikt\r\n"
+    - name: Översikt
       href: apache-domain-joined-introduction.md
     - name: Planera för domänanslutna kluster
       href: apache-domain-joined-architecture.md
-    - name: Konfigurera en domänansluten testmiljö
-      href: apache-domain-joined-configure.md
     - name: Konfigurera domänanslutna kluster med Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
