--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -3,58 +3,58 @@ documentType: LandingData
 title: Dokumentation om Azure Machine Learning Studio
 metadata:
   title: Dokumentation om Azure Machine Learning Studio
-  description: "Läs mer om hur du använder Azure Machine Learning Studio."
+  description: Läs mer om hur du använder Azure Machine Learning Studio.
   services: machine-learning
-  author: carolz
-  manager: carolz
+  author: j-martens
+  manager: cgronlun
   ms.service: machine-learning
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 01/18/2018
-  ms.author: carolz
-  ms.openlocfilehash: dd55c06d62f7678a5b5e721be80f3483c96be0f0
-  ms.sourcegitcommit: b32d6948033e7f85e3362e13347a664c0aaa04c1
+  ms.author: jmartens
+  ms.openlocfilehash: 7a12213df1ba496ea19b3d2d93bf7b62a6a0bb29
+  ms.sourcegitcommit: 48ab1b6526ce290316b9da4d18de00c77526a541
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 02/13/2018
+  ms.lasthandoff: 03/23/2018
 abstract:
-  description: "Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller."
+  description: Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Läs mer om hur du kommer igång med att använda Machine Learning Studio:"
+    text: 'Läs mer om hur du kommer igång med att använda Machine Learning Studio:'
   - type: list
     style: unordered
     items:
-    - html: "<a href=\"create-experiment\">Skapa ditt första experiment</a>"
-    - html: "<a href=\"algorithm-choice\">Välja den bästa algoritmen</a>"
+    - html: <a href="create-experiment">Skapa ditt första experiment</a>
+    - html: <a href="algorithm-choice">Välja den bästa algoritmen</a>
     - html: <a href="deploy-consume-web-service-guide">Operationalisera modellen</a>
     - html: <a href="data-science-for-beginners-the-5-questions-data-science-answers">Information om datavetenskap</a>
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Ta del av utökade självstudier som hjälper dig att skapa och distribuera modeller:"
+    text: 'Ta del av utökade självstudier som hjälper dig att skapa och distribuera modeller:'
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"walkthrough-develop-predictive-solution\">Skapa och distribuera en förutsägelselösning</a>"
-    - html: "<a href=\"azure-ml-customer-churn-scenario\">Kundomsättningsexempel</a>"
+    - html: <a href="walkthrough-develop-predictive-solution">Skapa och distribuera en förutsägelselösning</a>
+    - html: <a href="azure-ml-customer-churn-scenario">Kundomsättningsexempel</a>
 - title: Fler Azure Machine Learning-tekniker
   items:
   - type: paragraph
-    text: "Andra tekniker som är tillgängliga i Azure Machine Learning:"
+    text: 'Andra tekniker som är tillgängliga i Azure Machine Learning:'
   - type: list
     style: cards
     className: cardsFTitle
     items:
-    - title: "Azure Machine Learning-tjänster (förhandsgranskning)"
+    - title: Azure Machine Learning-tjänster (förhandsgranskning)
       href: /azure/machine-learning/preview/
       image:
         src: media/index/i_machine-learning.svg
         href: /azure/machine-learning/preview/
-    - title: "Virtuell dator för datavetenskap"
+    - title: Virtuell dator för datavetenskap
       href: /azure/machine-learning/data-science-virtual-machine/
       image:
         src: media/index/virtual-machines.svg
@@ -70,4 +70,4 @@ sections:
     - title: Moduler
       html: <p><a href="https://msdn.microsoft.com/library/azure/dn905974.aspx">Algoritm- och modulreferens</a></p>
     - title: REST
-      html: "<p><a href=\"/rest/api/machinelearning\">Hantering av REST API:er</a></p><p><a href=\"web-service-error-codes\">Felkoder för webbtjänst</a></p>"
+      html: <p><a href="/rest/api/machinelearning">Hantering av REST API:er</a></p><p><a href="web-service-error-codes">Felkoder för webbtjänst</a></p>
