--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Dokumentation för förhandsversionen av Azure Databricks"
+title: Dokumentation om Azure Databricks
 metadata:
-  title: "Dokumentation om Azure Databricks – självstudier | Microsoft Docs"
-  description: "Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster."
+  title: Dokumentation om Azure Databricks – självstudier | Microsoft Docs
+  description: Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster.
   services: azure-databricks
   author: nitinme
   manager: cgronlun
@@ -11,15 +11,15 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 11/15/2017
+  ms.date: 03/19/2018
   ms.author: nitinme
-  ms.openlocfilehash: 8bbb8bb020c8c64e11d072729b59074a406a03ca
-  ms.sourcegitcommit: a36a1ae91968de3fd68ff2f0c1697effbb210ba8
+  ms.openlocfilehash: 2c0bbbe6d9799258b983723c5d6980754a9908ae
+  ms.sourcegitcommit: 48ab1b6526ce290316b9da4d18de00c77526a541
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 03/17/2018
+  ms.lasthandoff: 03/23/2018
 abstract:
-  description: "Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster. Databricks har utformats med grundarna av Apache Spark och är integrerat med Azure för att tillhandahålla konfiguration med ett klick, effektiva arbetsflöden och en interaktiv arbetsyta som möjliggör samarbete mellan dataanalytiker, dataingenjörer och affärsanalytiker."
+  description: Lär dig hur du använder Azure Databricks med snabbstarten och de andra länkarna här. Azure Databricks är en Apache Spark-baserad analysplattform som är optimerad för Microsoft Azures plattform för molntjänster. Databricks har utformats med grundarna av Apache Spark och är integrerat med Azure för att tillhandahålla konfiguration med ett klick, effektiva arbetsflöden och en interaktiv arbetsyta som möjliggör samarbete mellan dataanalytiker, dataingenjörer och affärsanalytiker.
   aside:
     image:
       alt: 
@@ -30,10 +30,10 @@ abstract:
     href: https://azure.microsoft.com/resources/videos/connect-2017-introduction-to-azure-databricks/
     width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att skapa en arbetsyta för Azure Databricks, ett Spark-kluster och sedan hur du kör jobb med:"
+    text: 'Lär dig att skapa en arbetsyta för Azure Databricks, ett Spark-kluster och sedan hur du kör jobb med:'
   - type: list
     style: icon48
     items:
@@ -41,17 +41,26 @@ sections:
         src: /azure/azure-databricks/media/index/portal.svg
       text: Azure Portal
       href: /azure/azure-databricks/quickstart-create-databricks-workspace-portal
-- title: "Steg för steg-självstudier"
+    - image:
+        src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
+      text: Resource Manager-mall
+      href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig arbeta med Azure Databricks:"
+    text: 'Lär dig arbeta med Azure Databricks:'
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/azure-databricks/databricks-stream-from-eventhubs\">Strömma data från Event Hubs med hjälp av Azure Databricks</a>"
-    - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Attitydanalys med Azure Databricks och Cognitive Services</a>
-    - html: "<a href=\"https://go.microsoft.com/fwlink/?linkid=864083\" target=\"_blank\">Importera data från Azure Storage</a>"
-    - hmtl: <a href="https://go.microsoft.com/fwlink/?linkid=864084" target="_blank">Import data from Azure Data Lake Store</a>
-    - html: "<a href=\"https://docs.azuredatabricks.net/user-guide/notebooks/index.html\" target=\"_blank\">Arbeta med bärbara datorer</a>"
-    - html: "<a href=\"https://docs.azuredatabricks.net/user-guide/jobs.html\" target=\"_blank\">Köra Spark-jobb</a>"
-    - html: "<a href=\"https://docs.azuredatabricks.net/spark/latest/data-sources/index.html\" target=\"_blank\">Använda datakällor från Spark</a>"
+    - html: <a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Extrahera, transformera och läsa in data</a>
+    - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Strömma data med Event Hubs</a>
+    - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Attitydanalys med Cognitive Services</a>
+    - html: <a href="https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html" target="_blank">Strömma data från HDInsight Kafka</a>
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsD
+    items:
+    - title: REST
+      html: <p><a href="/rest/api/databricks">REST API</a></p>
