--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Dokumentation om Azure Container Instances
 metadata:
-  title: "Dokumentation om Azure Container Instances – självstudier | Microsoft Docs"
-  description: "Azure Container Instances erbjuder det snabbaste och enklaste sättet att köra en behållare i Azure, utan att behöva etablera några virtuella datorer och utan att behöva använda en tjänst på högre nivå."
+  title: Dokumentation om Azure Container Instances – självstudier | Microsoft Docs
+  description: Azure Container Instances erbjuder det snabbaste och enklaste sättet att köra en behållare i Azure, utan att behöva etablera några virtuella datorer och utan att behöva använda en tjänst på högre nivå.
   services: container-instances
   author: czeumault
   manager: carolz
@@ -13,23 +13,23 @@ metadata:
   ms.topic: landing-page
   ms.date: 07/26/2017
   ms.author: carolz
-  ms.openlocfilehash: 251ce769ce9d43d7706cd7ba5d0c0f47cde36d3f
-  ms.sourcegitcommit: 9890483687a2b28860ec179f5fd0a292cdf11d22
+  ms.openlocfilehash: 77bf10c4cdb0acf2ef324b14de0d3ae153543bdc
+  ms.sourcegitcommit: 48ab1b6526ce290316b9da4d18de00c77526a541
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/24/2018
+  ms.lasthandoff: 03/23/2018
 abstract:
-  description: "Azure Container Instances erbjuder det snabbaste och enklaste sättet att köra en behållare i Azure, utan att behöva etablera några virtuella datorer och utan att behöva använda en tjänst på högre nivå. Om du behöver en fullständig lösning för behållarorkestrering kan du läsa dokumentationen om <a href=\"/azure/container-service/kubernetes/\">Kubernetes på Azure Container Service</a>. Lär dig hur du skapar och hanterar behållarinstanser med våra snabbstarter, självstudier och exempel."
+  description: Azure Container Instances erbjuder det snabbaste och enklaste sättet att köra en behållare i Azure, utan att behöva etablera några virtuella datorer och utan att behöva använda en tjänst på högre nivå. Lär dig hur du skapar och hanterar behållarinstanser med våra snabbstarter, självstudier och exempel.<p>Om du behöver en fullständig lösning för behållarinitiering kan du läsa <a href="/azure/aks/">dokumentationen om Azure Container Service (AKS)</a>.</p>
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att distribuera behållaravbildningar med Azure Container Instances."
+    text: Lär dig att distribuera behållaravbildningar med Azure Container Instances.
   - type: list
     style: icon48
     items:
     - image:
-        src: /azure/virtual-machines/linux/media/index/cli.svg
+        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
       text: Azure CLI
       href: /azure/container-instances/container-instances-quickstart
     - image:
@@ -37,19 +37,19 @@ sections:
       text: Azure Portal
       href: /azure/container-instances/container-instances-quickstart-portal
     - image:
-        src: /azure/virtual-machines/linux/media/index/logo_powershell.svg
+        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
       text: Azure PowerShell
       href: /azure/container-instances/container-instances-quickstart-powershell
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig hur du paketerar kod i en behållaravbildning och kör den i en Azure-behållarinstans."
+    text: Lär dig hur du paketerar kod i en behållaravbildning och kör den i en Azure-behållarinstans.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/container-instances/container-instances-tutorial-prepare-app\">Paketera ett program i en behållaravbildning</a>"
-    - html: "<a href=\"/azure/container-instances/container-instances-tutorial-prepare-acr\">Skapa ett register med Azure Container Registry och ladda upp behållaravbildningen</a>"
-    - html: "<a href=\"/azure/container-instances/container-instances-tutorial-deploy-app\">Distribuera behållaravbildningen till en Azure-behållarinstans</a>"
+    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Paketera ett program i en behållaravbildning</a>
+    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-acr">Skapa ett register med Azure Container Registry och ladda upp behållaravbildningen</a>
+    - html: <a href="/azure/container-instances/container-instances-tutorial-deploy-app">Distribuera behållaravbildningen till en Azure-behållarinstans</a>
 - title: Referens
   items:
   - type: list
@@ -58,7 +58,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/container">Azure CLI</a></p><p><a href="/powershell/module/azurerm.containerinstance#container_instances">PowerShell</a></p>
-    - title: "Språk"
+    - title: Språk
       html: <p><a href="/dotnet/api/overview/azure/containerinstances">.NET</a></p><p><a href="/python/api/overview/azure/containerinstance">Python</a></p><p><a href="/java/api/overview/azure/containerinstance">Java</a></p><p><a href="/javascript/api/overview/azure/containerinstance">Node.js</a></p>
     - title: REST
       html: <p><a href="/rest/api/container-instances">REST API-referens</a></p><p><a href="/azure/templates/microsoft.containerinstance/containergroups">Resource Manager-mall</a></p>
