--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -28,9 +28,9 @@
     - name: 1 – Distribuera SSIS-paket till Azure
       items:
         - name: Användargränssnitt
-          href: tutorial-create-azure-ssis-runtime-portal.md
-        - name: Azure PowerShell
           href: tutorial-deploy-ssis-packages-azure.md
+        - name: Azure PowerShell
+          href: tutorial-deploy-ssis-packages-azure-powershell.md
     - name: 2 – Kopiera data i molnet
       items:
         - name: Kopiera data-verktyg
@@ -161,6 +161,8 @@
               href: connector-azure-table-storage.md
             - name: Cassandra
               href: connector-cassandra.md
+            - name: Common Data Service för appar
+              href: connector-dynamics-crm-office-365.md
             - name: Concur
               href: connector-concur.md
             - name: Couchbase
