--- a/articles/monitoring-and-diagnostics/toc.yml
+++ b/articles/monitoring-and-diagnostics/toc.yml
@@ -7,7 +7,7 @@
 - name: Snabbstarter
   expanded: true
   items:
-    - name: Avisera om måttvillkor
+    - name: Avisera (klassisk) om måttvillkor
       href: monitor-quick-resource-metric-alert-portal.md
     - name: Avisera om prenumerationsaktivitet
       href: monitor-quick-audit-notify-action-in-subscription.md
@@ -21,66 +21,45 @@
   items:
     - name: Källor för övervakningsdata
       href: monitoring-data-sources.md
+    - name: Azure Monitor
+      href: monitoring-overview-azure-monitor.md
+    - name: Mått
+      href: monitoring-overview-metrics.md
+    - name: Automatisk skalning
+      href: monitoring-overview-autoscale.md
+    - name: Diagnostikloggar
+      href: monitoring-overview-of-diagnostic-logs.md
+    - name: Aktivitetslogg
+      href: monitoring-overview-activity-logs.md
+    - name: Aviseringar
+      href: monitoring-overview-unified-alerts.md
+    - name: Aviseringar (klassiska)
+      href: monitoring-overview-alerts.md
+    - name: Loggaviseringar
+      href: monitor-alerts-unified-log.md
+    - name: Aktivitetsloggaviseringar (förhandsversion)
+      href: monitoring-activity-log-alerts-new-experience.md
+    - name: Utöka aviseringar från OMS till Azure
+      href: monitoring-alerts-extend.md
+    - name: Åtgärdsgrupper
+      href: monitoring-action-groups.md
+    - name: Azure Diagnostics-tillägg
+      href: azure-diagnostics.md
     - name: Rollbehörigheter och säkerhet
       href: monitoring-roles-permissions-security.md
     - name: Partnerintegrering
       href: monitoring-partners.md
-    - name: Ytterligare översikter
-      items:
-        - name: Azure Monitor
-          href: monitoring-overview-azure-monitor.md
-        - name: Mått
-          href: monitoring-overview-metrics.md
-        - name: Aviseringar
-          href: monitoring-overview-alerts.md
-        - name: Aviseringar (förhandsversion)
-          href: monitoring-overview-unified-alerts.md
-        - name: Loggaviseringar
-          href: monitor-alerts-unified-log.md
-        - name: Automatisk skalning
-          href: monitoring-overview-autoscale.md
-        - name: Aktivitetslogg
-          href: monitoring-overview-activity-logs.md
-        - name: Aktivitetsloggaviseringar (förhandsversion)
-          href: monitoring-activity-log-alerts-new-experience.md
-        - name: Åtgärdsgrupper
-          href: monitoring-action-groups.md
-        - name: Diagnostikloggar
-          href: monitoring-overview-of-diagnostic-logs.md
-        - name: Azure Diagnostics-tillägg
-          href: azure-diagnostics.md
-    - name: Scheman
-      items:
-        - name: Schema för Azure Diagnostics-tillägg
-          href: azure-diagnostics-schema.md
-          items:
-            - name: 1
-              href: azure-diagnostics-schema-1dot0.md
-            - name: 1.2
-              href: azure-diagnostics-schema-1dot2.md
-            - name: 1.3 och senare
-              href: azure-diagnostics-schema-1dot3-and-later.md
 - name: Instruktionsguider
   items:
-    - name: Genomgångar
-      items:
-        - name: Genomgång av Azure Monitor
-          href: monitoring-get-started.md
-        - name: Genomgång av automatisk skalning
-          href: monitoring-autoscale-get-started.md
-        - name: Flerdimensionell måttutforskare
-          href: monitoring-metric-charts.md
-        - name: Azure CLI 1.0-exempel
-          href: insights-cli-samples.md
-        - name: Azure PowerShell-exempel
-          href: insights-powershell-samples.md
+    - name: Genomgång av Azure Monitor
+      href: monitoring-get-started.md
     - name: Använda aviseringar
       items:
-        - name: Konfigurera aviseringar i nära realtid i Azure Portal
+        - name: Konfigurera nya aviseringar i Azure Portal
           href: monitoring-near-real-time-metric-alerts.md
-        - name: Konfigurera aviseringar i Azure Portal
+        - name: Konfigurera klassiska aviseringar i Azure Portal
           href: insights-alerts-portal.md
-        - name: Konfigurera mått eller loggaviseringar i Aviseringar (förhandsversion) på Azure Portal
+        - name: Konfigurera mått eller loggaviseringar i Azure Portal
           href: monitor-alerts-unified-usage.md
         - name: Konfigurera aviseringar med CLI
           href: insights-alerts-command-line-interface.md
@@ -90,8 +69,12 @@
           href: monitor-alerts-unified-log-webhook.md
         - name: Skapa en metrisk varning med en Resource Manager-mall
           href: monitoring-enable-alerts-using-template.md
+        - name: Initiera utökade aviseringar från OMS till Azure
+          href: monitoring-alerts-extend-tool.md
     - name: Använda automatisk skalning
       items:
+        - name: Genomgång av automatisk skalning
+          href: monitoring-autoscale-get-started.md
         - name: Förstå inställningarna för automatisk skalning
           href: monitoring-understanding-autoscale-settings.md
         - name: Bästa praxis
@@ -151,10 +134,6 @@
         - name: Aktivera diagnostikinställningar med Resource Manager-mallar
           href: monitoring-enable-diagnostic-logs-using-template.md
     - name: Använd REST API
-      items:
-        - name: Genomgång med REST API
-          href: monitoring-rest-api-walkthrough.md
-    - name: Använd Azure Diagnostics-tillägg
       items:
         - name: Skicka till Application Insights
           href: azure-diagnostics-configure-application-insights.md
