--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -2,7 +2,7 @@
   href: index.md
 - name: Arkitektur och design
   href: azure-security.md
-  expanded: true
+  expanded: false
   items:
     - name: Avancerad hotidentifiering
       href: azure-threat-detection.md
@@ -67,6 +67,8 @@
       items:
         - name: Bästa praxis
           href: azure-security-identity-management-best-practices.md
+        - name: Använda MFA på prenumerationsadministratörer
+          href: azure-security-global-admin.md
     - name: Nätverkssäkerhet
       href: security-network-overview.md
       items:
