--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -19,6 +19,8 @@
       items:
         - name: SSMS
           href: sql-database-connect-query-ssms.md
+        - name: SQL Operations Studio
+          href: 'https://docs.microsoft.com/sql/sql-operations-studio/quickstart-sql-database?toc=/azure/sql-database/toc.json'
         - name: Azure Portal
           href: sql-database-connect-query-portal.md
         - name: VS-kod
@@ -101,8 +103,10 @@
           href: sql-database-manage-logins.md
         - name: Multifaktorautentisering
           href: sql-database-ssms-mfa-authentication.md
-        - name: Granskning
+        - name: Granskning – SQL Database
           href: sql-database-auditing.md
+        - name: Granskning – Hanterad instans
+          href: sql-database-managed-instance-auditing.md
         - name: Hotidentifiering – SQL Database
           href: sql-database-threat-detection.md
         - name: Hotidentifiering – Managed Instance
