--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -208,7 +208,9 @@
       href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Dirigera händelser till en anpassad slutpunkt
       href: storage-blob-event-quickstart.md
-    - name: Anpassade domäner
+    - name: Återställa borttagna blobar
+      href: storage-blob-soft-delete.md
+    - name: Konfigurera ett anpassat domännamn
       href: storage-custom-domain-name.md
     - name: Söka i Blob Storage med Azure Search
       href: ../../search/search-blob-storage-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
