--- a/articles/machine-learning/preview/toc.yml
+++ b/articles/machine-learning/preview/toc.yml
@@ -197,7 +197,7 @@
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Prissättning
-      href: aml-services-pricing.md
+      href: aml-pricing.md
     - name: Regional tillgänglighet
       href: 'https://azure.microsoft.com/regions/services/'
     - name: TDSP (Team Data Science Process)
